# hyprlenia

./: .gitignore  README.md
chronos/: CMakeLists.txt  imgui.ini  scene2.out
chronos/include/glad/: glad.h
chronos/shaders/: .gitkeep  bloom_extract.glsl  blur_compute.glsl  display_frag.glsl  flow_lenia.glsl  food_update.comp  grid_count.comp  grid_prefix_sum.comp  grid_reorder.comp  lenia_compute.glsl  particle3d.frag  particle3d.vert  particle_lenia.comp  particle_lenia_display.frag  particle_lenia_grid_step.comp  particle_lenia_simple.comp  particle_lenia_step.comp  passthrough.vert  terrain.frag  terrain.vert  terrain_heightmap.comp
chronos/src/: BloomEffect.cpp  BloomEffect.h  BloomRenderer.cpp  BloomRenderer.h  Camera3D.cpp  Camera3D.h  ChronosApp.cpp  ChronosApp.h  ChronosApp2D.cpp  ChronosApp2D.h  ChronosHistoryBuffer.cpp  ChronosHistoryBuffer.h  FlowLenia2D.cpp  FlowLenia2D.h  Lenia2D.cpp  Lenia2D.h  Lenia3DCUDA.cu  Lenia3DCUDA.cuh  ParticleLife3D.cpp  ParticleLife3D.h  ParticleLifeCUDA.cu  ParticleLifeCUDA.cuh  ParticleRenderer3D.cpp  ParticleRenderer3D.h  ParticleSimulation.cpp  ParticleSimulation.h  Shader.cpp  Shader.h  TimeCubeRenderer.cpp  TimeCubeRenderer.h  VolumeRenderer.cpp  VolumeRenderer.h  cuda_glibc_fix.h  main.cpp  main3d.cpp
chronos/src/core/: Buffer.cpp  Buffer.h  ComputeShader.cpp  ComputeShader.h  RenderShader.cpp  RenderShader.h  Shader.cpp  Shader.h
chronos/src/headless/: HeadlessRenderer.cpp  HeadlessRenderer.h  VideoEncoder.cpp  VideoEncoder.h
chronos/src/particle_lenia/: main.cpp
hyprlenia/: CMakeLists.txt  ichack.out  scene1.out  scene3.out
hyprlenia/shaders/: food_update.comp  grid_count.comp  grid_prefix_sum.comp  grid_reorder.comp  lensing.frag  lensing.vert  particle3d.frag  particle3d.vert  particle_lenia.comp  particle_lenia_display.frag  particle_lenia_grid_step.comp  particle_lenia_simple.comp  particle_lenia_step.comp  terrain.frag  terrain.vert  terrain_heightmap.comp
hyprlenia/src/: glad.c
hyprlenia/src/core/: Buffer.h  ComputeShader.h  RenderShader.cpp  RenderShader.h  Shader.cpp  Shader.h
hyprlenia/src/particle_lenia/: main.cpp
